--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,12 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "io.ktor:ktor-server-core:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
+
+    implementation "org.jetbrains.exposed:exposed-core:0.27.1"
+    implementation "org.jetbrains.exposed:exposed-jdbc:0.27.1"
+    implementation "org.jetbrains.exposed:exposed-dao:0.27.1"
+
+    implementation "com.h2database:h2:1.4.200"
+    implementation 'com.zaxxer:HikariCP:3.4.2'
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
